--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="image/png" rel="icon" href="favicon.ico">
-    <title>JUST 100 DAYZ BRO🔥🔥</title>
+    <title>💀💀💀☠️☠️☠️☠️💀💀💀</title>
     <style>
         body {
             font-family: Arial, sans-serif;
